--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -55,6 +55,7 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
         android:layout_width="0dp"
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +70,6 @@
                 android:id="@+id/iv_product_image"
                 android:layout_width="0dp"
                 android:layout_height="320dp"
-                android:layout_marginTop="20dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -83,6 +83,8 @@
                 android:layout_marginTop="10dp"
                 android:backgroundTint="@color/white"
                 app:cardElevation="4dp"
+                android:elevation="4dp"
+                android:translationZ="2dp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/iv_product_image"
@@ -155,14 +157,13 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline_start"
                 app:layout_constraintTop_toBottomOf="@+id/cv_product_detail" />
 
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_product_type"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="40dp"
-                app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_product_type"
