--- a/app/src/main/res/layout/warehouse_detail_product_type.xml
+++ b/app/src/main/res/layout/warehouse_detail_product_type.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent"
     app:strokeWidth="0dp"
     android:backgroundTint="@color/white"
-    app:cardElevation="2dp"
-    android:elevation="8dp"
+    app:cardElevation="4dp"
+    android:elevation="4dp"
+    android:translationZ="2dp"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginStart="20dp"
